hard-gists/1459283a9c934cbc41f3/run.log
=== Docker Run Log for 1459283a9c934cbc41f3 ===
Started at: Mi 29. Okt 12:15:09 CET 2025

[2025-10-29 12:15:09] START: Running container for 1459283a9c934cbc41f3
[2025-10-29 12:15:10] SUCCESS: Container e79e04d4400f66ab7a72f313e9f2f134d6bd8f8e19cc8ca5ff15a508d864479b started for 1459283a9c934cbc41f3
=== Container logs for 1459283a9c934cbc41f3 ===
  File "/snippet.py", line 171
    print name, curve.GetValue(c4d.BaseTime(keys[0][0]), fps), keys[0][1]
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 1459283a9c934cbc41f3 ===
[2025-10-29 12:15:12] INFO: Container e79e04d4400f66ab7a72f313e9f2f134d6bd8f8e19cc8ca5ff15a508d864479b has stopped
